[tool.poetry]
name = "preparation_of_content_digests"
version = "0.1.0"
description = ""
authors = ["Мария Пирогова <mayefimenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
uvicorn = "0.17.6"
pydantic = "1.10.4"
python-dotenv = "0.21.1"
alembic = "1.9.3"
asyncpg = "0.27.0"
psycopg2-binary = "2.9.6"
httpx = "0.23.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.7.0"
flake8-commas = "2.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
requests = "^2.31.0"
anyio = "3.6.2"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line_length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
